<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_data_02">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/intro_welcome_00"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/intro_welcome_01"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/bike_data_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_border_no_background"
                android:hint="@string/bike_radius"
                android:inputType="number"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/bike_data_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:background="@drawable/white_border_no_background"
            android:padding="10dp"
            android:text="@string/default_next"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</FrameLayout>