<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_data_03">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/intro_welcome_03"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/intro_welcome_04"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/final_data_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:background="@drawable/white_border_no_background"
            android:padding="10dp"
            android:text="@string/default_start"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</FrameLayout>