<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_data_00">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <me.grantland.widget.AutofitTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/intro_welcome_00"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/intro_welcome_02"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_no_background"
            android:padding="15dp"
            android:text="@string/login_google"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</FrameLayout>